final touch ups

--- a/index.html
+++ b/index.html
@@ -281,9 +281,7 @@
                             <i class="tech-box__icon fab fa-html5"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">HTML</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                FHypertext Markup Language is the standard markup language for creating web pages and web applications. With Cascading Style Sheets and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.
                             </p>
                         </div>
                     </div>
@@ -292,9 +290,7 @@
                             <i class="tech-box__icon fab fa-css3-alt"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">CSS</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                    Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language like HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
                             </p>
                         </div>
                     </div>
@@ -303,9 +299,7 @@
                             <i class="tech-box__icon fab fa-js"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Javascript</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                    JavaScript, often abbreviated as JS, is a high-level, interpreted programming language that conforms to the ECMAScript specification. It is a language that is also characterized as dynamic, weakly typed, prototype-based and multi-paradigm.
                             </p>
                         </div>
                     </div>
@@ -314,9 +308,7 @@
                             <i class="tech-box__icon fab fa-react"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">ReactJS</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                    In computing, React is a JavaScript library for building user interfaces. It is maintained by Facebook and a community of individual developers and companies. React can be used as a base in the development of single-page or mobile applications.
                             </p>
                         </div>
                     </div>
@@ -327,9 +319,7 @@
                             <i class="tech-box__icon fab fa-python"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Python</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                    Python is an interpreted, high-level, general-purpose programming language. Created by Guido van Rossum and first released in 1991, Python has a design philosophy that emphasizes code readability, notably using significant whitespace. It provides constructs that enable clear programming on both small and large scales.
                             </p>
                         </div>
                     </div>
@@ -338,9 +328,7 @@
                             <i class="tech-box__icon far fa-heart"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Django</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                    Django is a Python-based free and open-source web framework, which follows the model-view-template architectural pattern. It is maintained by the Django Software Foundation, an independent organization established as a 501 non-profit. Django's primary goal is to ease the creation of complex, database-driven websites.
                             </p>
                         </div>
                     </div>
@@ -349,9 +337,7 @@
                             <i class="tech-box__icon fas fa-database"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">APIs</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                    In computer programming, an application programming interface is a set of subroutine definitions, communication protocols, and tools for building software. In general terms, it is a set of clearly defined methods of communication among various components
                             </p>
                         </div>
                     </div>
@@ -360,9 +346,7 @@
                             <i class="tech-box__icon fas fa-stroopwafel"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Object Oriented Programming</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                    Object-oriented programming is a programming paradigm based on the concept of "objects", which may contain data, in the form of fields, often known as attributes; and code, in the form of procedures, often known as methods.
                             </p>
                         </div>
                     </div>
@@ -373,9 +357,7 @@
                             <i class="tech-box__icon fas fa-torii-gate"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Test Driven Development</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                    Test-driven development is a software development process that relies on the repetition of a very short development cycle: requirements are turned into very specific test cases, then the software is improved to pass the new tests, only.
                             </p>
                         </div>
                     </div>
@@ -384,9 +366,7 @@
                             <i class="tech-box__icon fab fa-git"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">GIT</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                    Git is a version-control system for tracking changes in computer files and coordinating work on those files among multiple people. It is primarily used for source-code management in software development, but it can be used to keep track of changes in any set of files.
                             </p>
                         </div>
                     </div>
@@ -395,9 +375,7 @@
                             <i class="tech-box__icon fas fa-mobile-alt"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Swift</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                    Swift is a general-purpose, multi-paradigm, compiled programming language developed by Apple Inc. for iOS, macOS, watchOS, tvOS, Linux and z/OS. Swift is designed to work with Apple's Cocoa and Cocoa Touch frameworks and the large body of existing Objective-C code written for Apple products. Swift is a hobby of mine.
                             </p>
                         </div>
                     </div>
@@ -406,9 +384,7 @@
                             <i class="tech-box__icon fab fa-gitkraken"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Others</h3>
                             <p class="tech-box__text">
-                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
-                                esse
-                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                                I made the section with the reason to say that it does not matter what technologies I know. I am capable of learning more and willing to apply myself to those task. If weather or not one langague is known or not is irrelvant. I am willing to learn and apply myself.
                             </p>
                         </div>
                     </div>
