--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-    <!-- PROGRESS BAR -->
 
 
     <link rel="stylesheet" href="css/icon-font.css">
@@ -30,15 +29,32 @@
 </head>
 
 <body>
+        <div class="navigation">
+                <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+                <label for="navi-toggle" class="navigation__button">Menu</label>
+
+                <div class="navigation__background">&nbsp</div>
+
+                <nav class="navigation__nav">
+                    <ul class="navigation__list">
+                        <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About</a></li>
+                        <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Projects</a></li>
+                        <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Technologies</a></li>
+                        <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Contact Information</a></li>
+                    </ul>
+                </nav>
+
+            </div>
     <header class="header" id="top">
-        <nav class="header--navbar">
+        <!-- <nav class="header--navbar">
             <ul class="header--ul">
                 <li class="header--li"><a href="#top">About</a></li>
                 <li class="header--li"><a href="#projects">Projects</a></li>
                 <li class="header--li"><a href="#technologies">Technologies</a></li>
                 <li class="header--li"><a href="#footer">Contact Information</a></li>
             </ul>
-        </nav>
+        </nav> -->
             <header class="header">
                     <div class="header__logo-box">
                         <img src="img/favicon.ico" alt="Logo" class="header__logo">
