--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <link rel="manifest" href="img/site.webmanifest">
 
-    <title>R | YOUNG</title>
+    <script src="js/script.js"></script>
+
+    <!-- <title>R | YOUNG</title> -->
 </head>
 
 <body>
@@ -47,23 +49,16 @@
 
             </div>
     <header class="header" id="top">
-        <!-- <nav class="header--navbar">
-            <ul class="header--ul">
-                <li class="header--li"><a href="#top">About</a></li>
-                <li class="header--li"><a href="#projects">Projects</a></li>
-                <li class="header--li"><a href="#technologies">Technologies</a></li>
-                <li class="header--li"><a href="#footer">Contact Information</a></li>
-            </ul>
-        </nav> -->
             <header class="header">
                     <div class="header__logo-box">
                         <img src="img/favicon.ico" alt="Logo" class="header__logo">
                     </div>
     </header>
+    </header>
     <main>
         <section class="section-about">
                 <div class="u-center-text u-margin-bottom-big">
-                        <h2 class="heading-secondary">
+                        <h2 class="heading-secondary" id="about-me">
                             About Me
                         </h2>
                     <div class="row">
