--- a/index.html
+++ b/index.html
@@ -305,6 +305,34 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--7">
+                                &nbsp;
+                            </div>
+
+                            <div class="card__details">
+                                <ul>
+                                    <li>SASS</li>
+                                    <li>Design</li>
+                                    <li>Grid Layouts</li>
+                                    <li>Udemy</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-value">Nexter</p>
+                                    <p class="card__price-only">This was the project for Jonas Schmedtmann's Nexter
+                                        course. He designed and built a flex-box responsive site, while teaching SASS. </p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
             </div>
