--- a/index.html
+++ b/index.html
@@ -454,6 +454,35 @@
                     </div>
                     <div class="col-1-of-4">
                         <div class="tech-box">
+                            <i class="tech-box__icon fab fa-node-js"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Node.  JS</h3>
+                            <p class="tech-box__text">
+                                Node.js is an open-source, cross-platform JavaScript run-time environment that executes JavaScript code outside of a browser.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fab fa-sass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">SASS</h3>
+                            <p class="tech-box__text">
+                                    Test-driven development is a software development process that relies on the repetition of a very short development cycle: requirements are turned into very specific test cases, then the software is improved to pass the new tests, only.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fab fa-github"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">GitHub</h3>
+                            <p class="tech-box__text">
+                                GitHub Inc. is a web-based hosting service for version control using Git. It is mostly used for computer code. It offers all of the distributed version control and source code management functionality of Git as well as adding its own features.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
                             <i class="tech-box__icon fab fa-gitkraken"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Others</h3>
                             <p class="tech-box__text">
